# profiler

./: .gitmodules  CMakeLists.txt  prof-report.py
src/: instrumentation.cpp  main.cpp  prof-pass.cpp
src/prof-functions/: log.cpp
